--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Temporary Download Page For Bubble"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Quicksand:wght@300;400;500&display=swap" rel="stylesheet">
-  <meta property="og:title" content="Bubble Download Page" data-rh="true">
-    <meta property="og:description" content="Temporary download page for bubble application" data-rh="true">
-    <meta property="og:image" content="https://res.cloudinary.com/drlkgoter/image/upload/v1697749342/Screenshot_2023-10-19_140319_xe6oli.png" data-rh="true">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Quicksand:wght@300;400;500&display=swap" rel="stylesheet">
     
-<title>Bubble Download</title>
+    <title>Bubble</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
